--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "ariadne-ai"
-version = "0.1.4"
+version = "0.1.5"
 description = ""
-authors = ["Christos <chziakas@gmail.com>"]
+authors = ["Shiv <shiv@athina.ai>", "Akshat <akshat@athina.ai>", "Christos <chziakas@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
