--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ariadne-ai"
-version = "0.1.7"
+version = "0.1.8"
 description = ""
 authors = ["Shiv <shiv@athina.ai>", "Akshat <akshat@athina.ai>", "Christos <chziakas@gmail.com>"]
 readme = "README.md"
@@ -12,6 +12,7 @@ pandas = "^2.1.0"
 python-dotenv = "^1.0.0"
 datasets = "^2.14.5"
 scikit-learn = "^1.3.0"
+athina-logger = "0.0.6"
 
 
 [tool.poetry.group.dev.dependencies]
